my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EASZVAR_5/EASZVAR_5.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EASZVAR_5.dml:8:1: In b
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EASZVAR_5.dml:10:16: error EASZVAR: array upper bound is not a constant integer: 1 + f()
